<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data class="InventorycheckDialogTypeBinding">

        <variable
            name="onCloseClickListener"
            type="android.view.View.OnClickListener" />

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_bottomsheet"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:drawableEnd="@drawable/ic_close"
            android:gravity="center"
            android:onClick="@{onCloseClickListener}"
            android:text="@string/inventory_check_flow_type"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/text_supper_big"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/toolbar_divider" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox"
            style="@style/InventoryCheckDialogType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/selector_checkbox"
            android:text="@string/inventory_check_flow_all" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/toolbar_divider" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioIn"
                style="@style/InventoryCheckDialogType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/selector_checkbox"
                android:text="@string/inventory_check_flow_rec" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/toolbar_divider" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioAlloc"
                style="@style/InventoryCheckDialogType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/selector_checkbox"
                android:text="@string/inventory_check_flow_alloc" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/toolbar_divider" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioOut"
                style="@style/InventoryCheckDialogType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/selector_checkbox"
                android:text="@string/inventory_check_flow_out" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/toolbar_divider" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioMove"
                style="@style/InventoryCheckDialogType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/selector_checkbox"
                android:text="@string/inventory_check_flow_move" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/toolbar_divider" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioAdjust"
                style="@style/InventoryCheckDialogType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/selector_checkbox"
                android:text="@string/inventory_check_flow_adjust" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/toolbar_divider" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioCheck"
                style="@style/InventoryCheckDialogType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/selector_checkbox"
                android:text="@string/inventory_check_flow_check" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/toolbar_divider" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioLot"
                style="@style/InventoryCheckDialogType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/selector_checkbox"
                android:text="@string/inventory_check_flow_lot" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/toolbar_divider" />

        </RadioGroup>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>