<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data class="InventorycheckAdapterFlowinfoBinding">

        <import type="com.jd.saas.pdacommon.date.DateUtils" />

        <variable
            name="bean"
            type="com.jd.saas.pdainventorycheck.details.model.InventoryCheckFlowBean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ripple_bg_card_global"
        android:onClick="@{(v)->bean.itemClick()}"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="2dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_bg_red_corner"
                android:paddingStart="3dp"
                android:paddingTop="1dp"
                android:paddingEnd="3dp"
                android:paddingBottom="1dp"
                android:text="@{bean.transChildTypeName}"
                android:textColor="@color/white"
                android:textSize="@dimen/text_small" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/inventory_check_business_num"
                android:textColor="@color/inventory_check_flow_text_number"
                android:textSize="@dimen/text_bigger"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@{bean.docRefNo}"
                android:textColor="@color/inventory_check_flow_text_number"
                android:textSize="@dimen/text_bigger"
                android:textStyle="bold" />
        </LinearLayout>
<!--        android:text="@{bean.docRefNo==null?bean.docNo:bean.docRefNo}"-->

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="@color/toolbar_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@{bean.qty}"
                android:textColor="@color/inventory_check_flow_text_number"
                android:textSize="@dimen/text_supper_bigger"
                android:textStyle="bold" />
            <!--          -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inventory_check_batch"
                        android:textColor="@color/inventory_check_flow_text_creator"
                        android:textSize="@dimen/text_normal" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{bean.lotCode}"
                        style="@style/InventoryCheckFlowInfo"
                         />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inventory_check_creator"
                        android:textColor="@color/inventory_check_flow_text_creator"
                        android:textSize="@dimen/text_normal" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{bean.operator}"
                        style="@style/InventoryCheckFlowInfo" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inventory_check_time"
                        android:textColor="@color/inventory_check_flow_text_creator"
                        android:textSize="@dimen/text_normal" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@{DateUtils.formatLongDate(bean.operateTime,DateUtils.FORMAT_LONG)}"
                        style="@style/InventoryCheckFlowInfo"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>